--- a/faq.html
+++ b/faq.html
@@ -698,11 +698,11 @@ i also can't completely ignore the doubts of people who are not so kind with the
 
 <b>edit //</b> if you are wondering where to message me :
 
-<sub>🧷</sub> please don’t hesitate to reach me out by sending an email to <a id="linkbjinho" href="mailto:letters@middlepot.com">letters@middlepot.com</a> or simply using the <a id="linkbjinho" href="https://middlepot.com/contact" target="_blank">contact form</a> !
+<sub>🧷</sub> please don't hesitate to reach me out by sending an email to <a id="linkbjinho" href="mailto:letters@middlepot.com">letters@middlepot.com</a> or simply using the <a id="linkbjinho" href="https://middlepot.com/contact" target="_blank">contact form</a> !
 i do participate in small platforms & communities, but emails are the standard option of contacting someone on the internet.
 i will always prefer a safe & organized space for talking, especially for giving support.
 please, let me know if i can help, and i will do my best !!
-i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it’s very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 <sub>🧷</sub> i am always open for new pen pals from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
 
@@ -795,35 +795,35 @@ is it really healthy and safe for you, right now ?<br><br>
 <b>edit //</b> the big modern social media sites are unreliable, unorganized, and unsafe.
 they undoubtedly have ill intended features for making people feel insecure, addicted, and stressed out.
 they purposefully limit creativity, encourages shallow drama, and punish people for not following trends.
-i am tired. i don’t want that anymore.
+i am tired. i don't want that anymore.
 i never wanted to be controlled by others like that.
 
 so, from now on : <b>my social media accounts will be officially inactive !</b>
 i am officially unplugging myself out of the ugly world of the platforms runned by big companies.
-i will only use some private accounts for interacting with content i like, and that’s it.
+i will only use some private accounts for interacting with content i like, and that's it.
 
-i never felt comfortable using my accounts in a personal way, for both my sanity & safety i’ve always kept things this way.
+i never felt comfortable using my accounts in a personal way, for both my sanity & safety i've always kept things this way.
 since 2012, when the old web as i knew was starting to collapse rapidly, i have been searching for a way to escape those uncomfortable spaces and find a way to express myself the way i want.
 many people feel the same as me, and are also trying to walk away from big social media, so i try to help myself and others by working on solutions !
 
 after some months of use, <a id="linkbjinho" href="#snippets">my web code snippets</a> have been a good help for making social media sites less stressful ( and cuter ) for me, but, as expected .. only as an inactive user.
-i am still checking some youtube channels & tumblr blogs regularly, and it’s actually nice !
+i am still checking some youtube channels & tumblr blogs regularly, and it's actually nice !
 ( i received messages from people telling me that the codes helped them too, so i will keep them updated, there is no need to worry about that )
 
 the thing is : whenever i try to create content inside them i feel restricted, unsafe, i see my work being reduced in quality, my creative potential being discarded .. and my imagination cannot flow naturally.
 the more i experience ways to freely create & share things with people on the internet, the more i want to make use of it, and bring that nice feeling to others through my projects !
 
 i have been using forums, message boards, chat boxes, online games and many other kinds of small social platforms since ever, and i will continue to do so !
-it’s just that from now on, i will have a preference for places that make me feel safe, runned by people i trust, so i can prioritize my well-beign.
+it's just that from now on, i will have a preference for places that make me feel safe, runned by people i trust, so i can prioritize my well-beign.
 i actually think that big platforms tend to make it harder than usual to both find small creators, and to reach a niche audience for your content .. which is really a shame !
-my content, aesthetics and interestes are super specific, so i don’t feel welcomed on big communities at all.
+my content, aesthetics and interestes are super specific, so i don't feel welcomed on big communities at all.
 
 the standard way for me to find new cool stuff and get to know people is to explore the internet for blogs, personal websites, forums and group chats in general.
 that is the way i feel most comfortable, and where i got to know most of my friends too <font color="#d3a5a5" style="font-size:11px;">♡</font>
-because i am already used to the “old web” format of internet ( that’s how everything started for me ) , i don’t think it’s truly hard to socialize, find new interests or even advertise content without the use of big social media.
+because i am already used to the "old web" format of internet ( that's how everything started for me ) , i don't think it's truly hard to socialize, find new interests or even advertise content without the use of big social media.
 
-during the 2010s things went downhill and almost everyone was obsessed with social media, because it was still something new and cool, but since the 2020s began i can see a clearly change on people’s perspective.
-i am not the only person leaving big social media, i know many others who did / are doing / are willing to do the same, and because of the growing popularity of “webcore” aesthetics, 2000s fashion and the neocities platform, many people are making blogs and personal websites for themselves, which i feel super happy & excited about !!! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+during the 2010s things went downhill and almost everyone was obsessed with social media, because it was still something new and cool, but since the 2020s began i can see a clearly change on people's perspective.
+i am not the only person leaving big social media, i know many others who did / are doing / are willing to do the same, and because of the growing popularity of "webcore" aesthetics, 2000s fashion and the neocities platform, many people are making blogs and personal websites for themselves, which i feel super happy & excited about !!! <font color="#d3a5a5" style="font-size:11px;">♡</font>
 i am really hopeful for the future of the internet, and i will embrace this completely and do my best to help by making my own projects, and sharing those of people i admire.
 please visit my /recommended page, as it is frequently updated with new wonderful sites !!</pre>
 
@@ -897,9 +897,9 @@ so i must work hard for us all, to have our very deserved comfort spaces, becaus
 
 <b>edit //</b> i got many questions since i posted about my web code snippets, and some of you wanted to know if i have one for discord too.
 the answer is : yes, i did make a script for discord as well !
-at first it was only for inserting css, so i could make it pink .. but recently i updated it for also making the blocked people’s messages disappear from the chat, which is nice !
+at first it was only for inserting css, so i could make it pink .. but recently i updated it for also making the blocked people's messages disappear from the chat, which is nice !
 it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?
-it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it’s alright with the light theme too !
+it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it's alright with the light theme too !
 i did my best to make it cute but also functional, so you can see both white and black stuff.
 what do you think ? hopefully using it will make your experience with discord a bit nicer as well <font color="#d3a5a5" style="font-size:11px;">♡</font>
 <a name="applysnippets" id="applysnippets"></a>
