--- a/blog.html
+++ b/blog.html
@@ -1452,7 +1452,7 @@ you are free to use them as you personally like, and modify according to your pr
 i wish i could be more of an active help to others, and if i have to insert javascript into websites for achieving a more comfortable user experience, i am sharing them with you, in hopes to help in some way.
 
 the reality is that we have no control over our personal information on these platforms ( yes i do consider numbers something very personal, as it is clearly used for judging our "success" and "relevance" ) .
-on instagram, a few interaction numbers are hidden by standard ( at least for me ) but not the following count, while on youtube you can hide the subscriptions, but not any other numbers.
+on instagram, a few interaction numbers are hidden by standard ( at least for me ) but not the following count, while on youtube you can hide a few numbers, but not all of them either.
 tumblr gives options to hide both followers & notes - but only on your own blog, not on the tumblr site or app.
 twitter won't let you hide anything.
 it really really bothers me, deeply, so i look forward to more ways to hide all the unnecessarily stressing numbers from everyone, not only those who use my scripts, but i don't keep my hopes up <sub>🌧</sub>
