--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <meta property="twitter:description" content="𝑚𝑒𝑙𝑖𝑠𝑠𝑎 𝑓𝑙𝑜𝑤𝑒𝑟 𝑡𝑤𝑖𝑔 𝑖𝑛𝑠𝑖𝑑𝑒 𝑎 𝑝𝑜𝑡, 𝑖𝑛 𝑡ℎ𝑒 𝑚𝑖𝑑𝑑𝑙𝑒 𝑜𝑓 𝑎 𝑤𝑖𝑛𝑑𝑜𝑤 𝑠𝑖𝑙𝑙">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
 
-
+<meta name="google-site-verification" content="4H46ahrr9DlGwfQlAMtfvUiXzZdrKf1LlX3CGpT0s2E" />
 <meta name="google-site-verification" content="XSwoCWBrpJECWQJaaNREq2GeweamSFmo78j2dJ_F3AA" />
 
 <style>
