--- a/recommended.html
+++ b/recommended.html
@@ -233,17 +233,84 @@ z-index: 11;
 <div style= "padding-left: 20%; padding-right: 20%;">
 
 <center><img src="https://i.imgur.com/DEMpKhV.png"><br><br><br>
-<font color="#a19489">these are some beautiful sites & blogs that i recommend</font><br><br>
+<font color="#a19489">these are some beautiful sites & blogs that i recommend<br>
+scroll down for webrings, cliques and buttons</font><br><br>
 <font color="#ccb1b1">( <a href="#mybutton" id="linkbjinho">click here to get my button</a> )</font></center>
 <br><br>
 
+<center>
+<img src="https://i.imgur.com/WoYT1el.png"><br><br><br>
+
+<style>
+@font-face {
+font-family: 'puf';
+font-weight: normal;
+font-style: normal;
+src: url('puf.otf') format('opentype');
+}
+.yesterwebring{
+color:#b5a1a1;
+font-family:'Verdana';
+text-transform: lowercase;
+font-size:10px;
+line-height:15px;
+padding:10px;
+width:170px;
+height:155px;
+background-color: none;
+background-image:url(https://i.imgur.com/kIt4tGR.png);
+}
+.yw-widget-full .yw-title{
+color:#d9c1c1;
+font-family:'puf';
+text-transform: lowercase;
+letter-spacing:1px;
+font-size:20px;
+font-weight: lighter;
+text-shadow: 2px 2px #f2e6e6;
+margin-top:13px;
+margin-bottom:20px;
+}
+.yesterwebring a{
+text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px dotted #ccb1b1;
+}</style>
+<div class="yw-widget-full yw-raw yesterwebring" data-yw-url="https://middlepot.com"></div>
+<script src="https://yesterweb.org/js/widget.js"></script>
+
+<br>
+<div style="width:200px; height:20px; padding:6px; background-image:url(https://i.imgur.com/Xsn0AWq.png);">
+<font style="font-size:10px;">
+<a href='https://webring.dinhe.net/prev/https://middlepot.com/recommended'><sub><img src="https://i.imgur.com/yQoINzJ.png"></sub></a>
+　<a style="text-decoration: none; color:#bfa8a8; font-family:verdana; font-size:10px; font-weight: lighter; text-shadow: 2px 2px #fff;" href='https://webring.dinhe.net' target="_blank">retronaut webring</a>　
+<a href='https://webring.dinhe.net/next/https://middlepot.com/recommended'><sub><img src="https://i.imgur.com/xYH2EcP.png"></sub></a>
+</font>
+</div>
+
+<br><br>
+<div class="bq clique"><font style="font-size:10px; letter-spacing:1px;"><a id="linkbjinho" href="http://scented.minty.nu" target=_blank>𝑠𝑐𝑒𝑛𝑡𝑒𝑑</a> // 𝑝𝑜𝑤𝑑𝑒𝑟𝑦 𝑣𝑎𝑛𝑖𝑙𝑙𝑎</font></div>
+
+
+<br><br>
+<div style="width:210px; height:20px; padding:5px; background-image:url(https://i.imgur.com/uqqkU8a.png);">
+<font style="font-size:10px;">
+<a href='https://hotlinewebring.club/middlepot/previous'><sub><sub><img src="https://i.imgur.com/oSJ5zQT.png"></sub></sub></a>
+　<a style="text-decoration: none; color:#b09690; font-family:verdana; font-size:10px; letter-spacing:1px; text-shadow: 1px 1px #fff;" href='https://hotlinewebring.club' target="_blank">𝗁𝗈𝗍𝗅𝗂𝗇𝖾 𝗐𝖾𝖻𝗋𝗂𝗇𝗀</a>　
+<a href='https://hotlinewebring.club/middlepot/next'><sub><sub><img src="https://i.imgur.com/1pWGPze.png"></sub></sub></a>
+</font>
+</div>
+
+<br><br>
 <div style="line-height:8px;">
 	
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
-<div style="margin-top:-8px;">
+<br><br>
 
-<a href="https://tokidoki.neocities.org" target="_blank"><img src="https://i.imgur.com/Fwf31AW.gif"></a>
+<a href="https://dokodemo.neocities.org" target="_blank"><img src="https://i.imgur.com/hhrLJ1P.gif"></a>
+　<a href="https://ophanimkei.com" target="_blank"><img src="https://i.imgur.com/rj0io1Z.png"></a>
+　<a href="https://koinuko.pink" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/0CtvGkr.gif"></a>　　
+
+<br><br><a href="https://tokidoki.neocities.org" target="_blank"><img src="https://i.imgur.com/Mb9rhLN.gif"></a>
 　<a href="https://strwbrry.neocities.org" target="_blank"><img src="https://i.imgur.com/lBc40U7.png"></a>
 　<a href="https://angelicgarden.neocities.org" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/JTqscVA.gif"></a>　　
 
@@ -370,21 +437,18 @@ z-index: 11;
 </center>
 </div>
 
-<br><br><br>
-<center>
+<br><br><a name="mybutton" id="mybutton"></a><br>
 <img src="https://i.imgur.com/WoYT1el.png"><br><br>
 </center>
 <br>
-<a name="mybutton" id="mybutton"></a>
 
 <font color="#ADA49C"><center>how to have your site / blog here :</center><br><br></font><font color="#c7b3b8">
-　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must be drama-free and sfw ;<br>
-　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　your button must be rectangular ( preferably 88 x 31 px ) ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must be completely sfw ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　your button must be rectangular ( preferably 88 x 31 ) ;<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here backups of some inactive sites ;<br>
-　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site, i will be very happy !<br>
-　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　this is my button :<br><br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site too, i will be very happy !<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　these are my current buttons :<br><br>
 </font><br>
-<center><img src="https://middlepot.com/button.png"></center><br>
 <script>
 function copyTextFromArea(areaId){
 var area = document.getElementById(areaId);
@@ -394,6 +458,8 @@ area.setSelectionRange(0, 99999);
 document.execCommand("copy");
 }
 </script>
+
+<center><img src="https://middlepot.com/button.png"></center><br>
 <center>
 <textarea id="1" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -403,9 +469,65 @@ document.execCommand("copy");
 style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
 background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
 </center><br>
-</div>
+
+<center><img src="https://middlepot.com/logo.png"></center><br>
+<center>
+<textarea id="2" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/logo.png"></a></textarea><br>
+<input onclick="copyTextFromArea('2');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
+</center><br>
+
+<center><img src="https://middlepot.com/tinybutton.png"></center><br>
+<center>
+<textarea id="3" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/tinybutton.png"></a></textarea><br>
+<input onclick="copyTextFromArea('3');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
+</center><br>
+
+<center><img src="https://middlepot.com/signature.png"></center><br>
+<center>
+<textarea id="4" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/signature.png"></a></textarea><br>
+<input onclick="copyTextFromArea('4');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
+</center><br>
+
+<center><img src="https://middlepot.com/minibanner.png"></center><br>
+<center>
+<textarea id="5" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/minibanner.png"></a></textarea><br>
+<input onclick="copyTextFromArea('5');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
+</center><br>
+
+<center><img src="https://middlepot.com/banner.png"></center><br>
+<center>
+<textarea id="6" style="height:12px; width:62px;  border:1px dotted #ADA49C; -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -khtml-border-radius: 20px;
+    border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/YkzlCSl.png); font-size:6px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com" target="_blank"><img src="https://middlepot.com/banner.png"></a></textarea><br>
+<input onclick="copyTextFromArea('6');"
+style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
+background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
+</center><br>
 <br><br>
 
+
+</div>
 </div>
 </div>
 </div>
