--- a/index.html
+++ b/index.html
@@ -474,17 +474,17 @@ z-index: 3;
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div>
+　　07.13 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> updates on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
 　　07.08 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
 　　06.30 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
 　　06.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> layout on: <a href="/care" style="text-decoration: none;"><font color="#DFB7B7">/care</font></a><br>
 　　06.25 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> website on: <a href="/pooftie" style="text-decoration: none;"><font color="#DFB7B7">/pooftie</font></a><br>
-　　06.25 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/links" style="text-decoration: none;"><font color="#DFB7B7">/links</font></a><br>
 </div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . july . 08</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2022 . july . 13</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
