--- a/recommended.html
+++ b/recommended.html
@@ -448,7 +448,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here backups of some inactive sites ;<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site too, i will be very happy !<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　these are my current buttons :<br><br>
-</font><br>
+</font><br></div>
 <script>
 function copyTextFromArea(areaId){
 var area = document.getElementById(areaId);
@@ -479,7 +479,7 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 <input onclick="copyTextFromArea('2');"
 style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
 background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
-</center><br>
+</center><br><br>
 
 <center><img src="https://middlepot.com/tinybutton.png"></center><br>
 <center>
@@ -490,7 +490,7 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 <input onclick="copyTextFromArea('3');"
 style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
 background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
-</center><br>
+</center><br><br>
 
 <center><img src="https://middlepot.com/signature.png"></center><br>
 <center>
@@ -501,7 +501,7 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 <input onclick="copyTextFromArea('4');"
 style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
 background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
-</center><br>
+</center><br><br>
 
 <center><img src="https://middlepot.com/minibanner.png"></center><br>
 <center>
@@ -512,7 +512,7 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 <input onclick="copyTextFromArea('5');"
 style="width:55px; height:15px; overflow-x:hidden; cursor: url(https://i.imgur.com/EZZ5Vol.png), progress; outline:none; background-color: transparent;
 background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab; -webkit-touch-callout: none;-webkit-user-select: none;-khtml-user-select: none;-moz-user-select: none; -ms-user-select: none;user-select: none;" type="button"></input>
-</center><br>
+</center><br><br>
 
 <center><img src="https://middlepot.com/banner.png"></center><br>
 <center>
@@ -527,7 +527,7 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 <br><br>
 
 
-</div>
+
 </div>
 </div>
 </div>
