--- a/recommended.html
+++ b/recommended.html
@@ -306,9 +306,13 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
-<a href="https://dokodemo.neocities.org" target="_blank"><img src="https://i.imgur.com/hhrLJ1P.gif"></a>
+<a href="https://fairytrash.neocities.org" target="_blank"><img src="https://i.imgur.com/WEFuW50.gif"></a>
+　<a href="https://neoratz.neocities.org" target="_blank"><img src="https://i.imgur.com/o9uyrYq.gif"></a>
+　<a href="https://kowakawaii.moe" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/l0O6Qnq.gif"></a>　　
+
+<br><br><a href="https://dokodemo.neocities.org" target="_blank"><img src="https://i.imgur.com/hhrLJ1P.gif"></a>
 　<a href="https://ophanimkei.com" target="_blank"><img src="https://i.imgur.com/rj0io1Z.png"></a>
-　<a href="https://koinuko.pink" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/0CtvGkr.gif"></a>　　
+　<a href="https://koinuko.pink" target="_blank"><img src="https://i.imgur.com/0CtvGkr.gif"></a>　　
 
 <br><br><a href="https://tokidoki.neocities.org" target="_blank"><img src="https://i.imgur.com/Mb9rhLN.gif"></a>
 　<a href="https://strwbrry.neocities.org" target="_blank"><img src="https://i.imgur.com/lBc40U7.png"></a>
@@ -443,7 +447,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <br>
 
 <font color="#ADA49C"><center>how to have your site / blog here :</center><br><br></font><font color="#c7b3b8">
-　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　it must be completely sfw ;<br>
+　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　message me your link using the contact form ;<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　your button must be rectangular ( preferably 88 x 31 ) ;<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　i also keep here backups of some inactive sites ;<br>
 　　　　　<font style="color: #e3d5d5; text-shadow: 2px 2px #f2e1e1; font-size:11px;">♡</font>　feel free to recommend my site too, i will be very happy !<br>
