--- a/recommended.html
+++ b/recommended.html
@@ -281,7 +281,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 <div style="width:200px; height:20px; padding:6px; background-image:url(https://i.imgur.com/Xsn0AWq.png);">
 <font style="font-size:10px;">
 <a href='https://webring.dinhe.net/prev/https://middlepot.com/recommended'><sub><img src="https://i.imgur.com/yQoINzJ.png"></sub></a>
-　<a style="text-decoration: none; color:#bfa8a8; font-family:verdana; font-size:10px; font-weight: lighter; text-shadow: 2px 2px #fff;" href='https://webring.dinhe.net' target="_blank">retronaut webring</a>　
+　<a style="text-decoration: none; color:#bfa8a8; font-family:verdana; font-size:10px; text-shadow: 2px 2px #fff;" href='https://webring.dinhe.net' target="_blank">retronaut webring</a>　
 <a href='https://webring.dinhe.net/next/https://middlepot.com/recommended'><sub><img src="https://i.imgur.com/xYH2EcP.png"></sub></a>
 </font>
 </div>
