--- a/recommended.html
+++ b/recommended.html
@@ -287,7 +287,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 </div>
 
 <br><br>
-<div class="bq clique"><font style="font-size:10px; letter-spacing:1px;"><a id="linkbjinho" href="http://scented.minty.nu" target=_blank>𝑠𝑐𝑒𝑛𝑡𝑒𝑑</a> // 𝑝𝑜𝑤𝑑𝑒𝑟𝑦 𝑣𝑎𝑛𝑖𝑙𝑙𝑎</font></div>
+<div class="bq clique"><font style="font-size:10px; letter-spacing:1px;"><a id="linkbjinho" href="http://scented.minty.nu" target="_blank">𝑠𝑐𝑒𝑛𝑡𝑒𝑑</a> // 𝑝𝑜𝑤𝑑𝑒𝑟𝑦 𝑣𝑎𝑛𝑖𝑙𝑙𝑎</font></div>
 
 
 <br><br>
@@ -299,14 +299,34 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 </font>
 </div>
 
-<br><br>
+<div style="line-height:7px;">
+<br><br></div>
+<font style="font-size:10px; letter-spacing:1px;"><a style="text-decoration: none; color:#b09690; font-family:verdana; font-size:10px; letter-spacing:1px; background-color:#fff; border-radius: 10px; box-shadow: 0 0 10px #fff;" href="http://cliqued.wings.nu/" target="_blank"><font color="#d9a7a7">r</font><font color="#d1b69b">a</font><font color="#dbd19a">i</font><font color="#adccad">n</font><font color="#b2b2d4">b</font><font color="#bfb0cf">o</font><font color="#c9a9ba">w</font></a> <sub><sub><img src="https://i.imgur.com/KkdenmV.gif"></sub></sub> <font color="#d1b5b2">soft baby pink</font></font>
+
+<br><br><br>
 <div style="line-height:8px;">
 	
 <center>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
-<a href="https://fairytrash.neocities.org" target="_blank"><img src="https://i.imgur.com/WEFuW50.gif"></a>
+<a href="https://web.archive.org/web/20071213151324/http://sozai-love.sakura.ne.jp:80/" target="_blank"><img src="https://i.imgur.com/81Si3Qn.gif"></a>
+　<a href="https://milkyglitter.webs.com/pretend" target="_blank"><img src="https://i.imgur.com/lX469Dt.gif"></a>
+　<a href="https://web.archive.org/web/20090205041804mp_/http://party.chottu.net/" target="_blank"><img src="https://i.imgur.com/ZTxeP5F.gif"></a>　　
+
+<br><br><a href="https://web.archive.org/web/20090214080210mp_/http://salttea.web.fc2.com/" target="_blank"><img src="https://i.imgur.com/t4LPKIA.jpg"></a>
+　<a href="https://smoothsailing.asclaria.org" target="_blank"><img src="https://i.imgur.com/l1eaP3v.png"></a>
+　<a href="https://alicehome.suichu-ka.com" target="_blank"><img width="88px" height="31px"src="https://i.imgur.com/gWZZkeE.gif"></a>　　
+
+<br><br><a href="https://web.archive.org/web/20100204083502/http://www.jttk.zaq.ne.jp:80/tear" target="_blank"><img src="https://i.imgur.com/1prOYPq.gif"></a>
+　<a href="https://milkyglitter.webs.com" target="_blank"><img src="https://i.imgur.com/oMnUPo9.png"></a>
+　<a href="https://mizunotic.neocities.org" target="_blank"><img src="https://i.imgur.com/MIU0K8j.png"></a>　　
+
+<br><br><a href="https://web.archive.org/web/20070208044145/http://jewelry-sozai.jp:80/" target="_blank"><img src="https://i.imgur.com/LWu3wL7.gif"></a>
+　<a href="https://betsyboo.neocities.org" target="_blank"><img src="https://i.imgur.com/jmWFBVp.gif"></a>
+　<a href="https://list-me.com" target="_blank"><img src="https://i.imgur.com/Ee6MQHB.png"></a>　　
+
+<br><br><a href="https://fairytrash.neocities.org" target="_blank"><img src="https://i.imgur.com/WEFuW50.gif"></a>
 　<a href="https://neoratz.neocities.org" target="_blank"><img src="https://i.imgur.com/o9uyrYq.gif"></a>
 　<a href="https://kowakawaii.moe" target="_blank"><img width="88px" height="31px" src="https://i.imgur.com/l0O6Qnq.gif"></a>　　
 
