--- a/recommended.html
+++ b/recommended.html
@@ -314,6 +314,10 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 　<a href="https://milkyglitter.webs.com/pretend" target="_blank"><img src="https://i.imgur.com/lX469Dt.gif"></a>
 　<a href="https://web.archive.org/web/20090205041804mp_/http://party.chottu.net/" target="_blank"><img src="https://i.imgur.com/ZTxeP5F.gif"></a>　　
 
+<br><br><a href="http://kawaiiness.net/home.php" target="_blank"><img src="https://i.imgur.com/5EIix7h.gif"></a>
+　<a href="http://misa.phoophie.com" target="_blank"><img src="https://i.imgur.com/aeXxTAf.gif"></a>
+　<a href="http://caz.pausedlife.com/homepage.html" target="_blank"><img src="https://i.imgur.com/MpicVQ1.gif"></a>　　
+
 <br><br><a href="https://web.archive.org/web/20090214080210mp_/http://salttea.web.fc2.com/" target="_blank"><img src="https://i.imgur.com/t4LPKIA.jpg"></a>
 　<a href="https://smoothsailing.asclaria.org" target="_blank"><img src="https://i.imgur.com/l1eaP3v.png"></a>
 　<a href="https://alicehome.suichu-ka.com" target="_blank"><img width="88px" height="31px"src="https://i.imgur.com/gWZZkeE.gif"></a>　　
