--- a/faq.html
+++ b/faq.html
@@ -699,7 +699,7 @@ i also can't completely ignore the doubts of people who are not so kind with the
 <b>edit //</b> if you are wondering where to message me :
 
 <sub>🧷</sub> please don't hesitate to reach me out by sending an email to <a id="linkbjinho" href="mailto:letters@middlepot.com">letters@middlepot.com</a> or simply using the <a id="linkbjinho" href="https://middlepot.com/contact" target="_blank">contact form</a> !
-i do participate in small platforms & communities, but emails are the standard option of contacting someone on the internet.
+i do participate in small platforms & communities, and i like using all kinds of message boards on people's sites, but emails are the standard option of contacting someone on the internet.
 i will always prefer a safe & organized space for talking, especially for giving support.
 please, let me know if i can help, and i will do my best !!
 i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
